--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "week3/unimatch"]
 	path = week3/unimatch
 	url = https://github.com/autonomousvision/unimatch
+[submodule "week4/sort"]
+	path = week4/sort
+	url = https://github.com/abewley/sort
